--- a/banco-ai.service.example
+++ b/banco-ai.service.example
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=simple
-User=www-data
+User=bancoai
 WorkingDirectory=/var/www/banco-ai/backend
 ExecStart=/usr/bin/java -jar -Dspring.profiles.active=prod /var/www/banco-ai/backend/target/banco-ai-1.0.0.jar
 Restart=always
