--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -37,6 +37,23 @@ jwt.expiration=86400000
 file.upload-dir=${UPLOAD_DIR:uploads/carros}
 
 # Email Configuration - Configure com suas credenciais
+# Opção 1: Gmail SMTP (requer senha de app - pode expirar)
+# Opção 2: SendGrid (recomendado para produção - não expira)
+# Opção 3: Outro servidor SMTP
+
+# Para Gmail:
+# spring.mail.host=smtp.gmail.com
+# spring.mail.port=587
+# spring.mail.username=seu_email@gmail.com
+# spring.mail.password=senha_de_app_gerada (16 caracteres, sem espaços)
+
+# Para SendGrid (recomendado):
+# spring.mail.host=smtp.sendgrid.net
+# spring.mail.port=587
+# spring.mail.username=apikey
+# spring.mail.password=SG.sua_api_key_aqui
+
+# Configuração atual (via variáveis de ambiente)
 spring.mail.host=${MAIL_HOST:smtp.gmail.com}
 spring.mail.port=${MAIL_PORT:587}
 spring.mail.username=${MAIL_USERNAME:}
@@ -44,6 +61,9 @@ spring.mail.password=${MAIL_PASSWORD:}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+
+# Habilitar/desabilitar envio de email (útil para testes)
+app.email.enabled=${EMAIL_ENABLED:true}
 
 # Frontend URL
 app.frontend.url=${FRONTEND_URL:http://localhost:3000}
