--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -62,6 +62,10 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
+# Email From Address (deve ser um email verificado no SendGrid)
+# Para SendGrid: verifique o email em Settings → Sender Authentication → Single Sender Verification
+app.mail.from=${MAIL_FROM:quickAI.automation@gmail.com}
+
 # Habilitar/desabilitar envio de email (útil para testes)
 app.email.enabled=${EMAIL_ENABLED:true}
 
